files moved to library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(archiever)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(archiever main.cpp BitReader.cpp BitReader.h Heap.cpp Heap.h Trie.cpp Trie.h Node.cpp BitWriter.cpp BitWriter.h Compress.cpp Compress.h CONSTANTS.h Decompress.cpp Decompress.h)
+add_executable(archiever main.cpp library/BitReader.cpp library/BitReader.h library/Heap.cpp library/Heap.h library/Trie.cpp library/Trie.h library/Node.cpp library/BitWriter.cpp library/BitWriter.h library/Compress.cpp library/Compress.h library/CONSTANTS.h library/Decompress.cpp library/Decompress.h)
